src/objects/Integration_Record_Type_Mapping__c.object
<CustomObject>
    <description>Used to keep the OKHAFE mappings against Account Record Types.</description>
    <fields>
        <fullName>Customer_Group_Exception__c</fullName>
        <description>Add customer group, when ownership should be overwritten based on Customer Group. Created to handle DEX-customers who has SE numbers but can be differentiated from Swedish customers by customer group</description>
        <inlineHelpText>Add customer group, when ownership should be overwritten based on Customer Group. Created to handle DEX-customers who has SE numbers but can be differentiated from Swedish customers by customer group</inlineHelpText>
        <label>Customer Group Exception</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_End_User_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbok is ticked if the Record Type is of End User Type.</description>
        <label>Is End User Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OKHAFE_Setting__c</fullName>
        <label>OKHAFE Setting</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <label>Product Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>SSIS Record Type Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_End_User_Account__c</columns>
        <columns>OKHAFE_Setting__c</columns>
        <columns>Product_Area__c</columns>
        <columns>Record_Type_ID__c</columns>
        <columns>Customer_Group_Exception__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Record_Type_Mappings</fullName>
        <columns>NAME</columns>
        <columns>OKHAFE_Setting__c</columns>
        <columns>Is_End_User_Account__c</columns>
        <columns>Product_Area__c</columns>
        <columns>Record_Type_ID__c</columns>
        <columns>Customer_Group_Exception__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Record Type Mappings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dental_Record_Type_Mappings</fullName>
        <columns>NAME</columns>
        <columns>OKHAFE_Setting__c</columns>
        <columns>Is_End_User_Account__c</columns>
        <columns>Product_Area__c</columns>
        <columns>Customer_Group_Exception__c</columns>
        <columns>Record_Type_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Area__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </filters>
        <label>Dental Record Type Mappings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Surgery_Record_Type_Mappings</fullName>
        <columns>NAME</columns>
        <columns>OKHAFE_Setting__c</columns>
        <columns>Is_End_User_Account__c</columns>
        <columns>Product_Area__c</columns>
        <columns>Record_Type_ID__c</columns>
        <columns>Customer_Group_Exception__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Area__c</field>
            <operation>equals</operation>
            <value>Surgery</value>
        </filters>
        <label>Surgery Record Type Mappings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Urology_Record_Type_Mappings</fullName>
        <columns>NAME</columns>
        <columns>OKHAFE_Setting__c</columns>
        <columns>Is_End_User_Account__c</columns>
        <columns>Product_Area__c</columns>
        <columns>Customer_Group_Exception__c</columns>
        <columns>Record_Type_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Area__c</field>
            <operation>equals</operation>
            <value>Urology</value>
        </filters>
        <label>Urology Record Type Mappings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Integration: Record Type Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSIS: Record Type Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>